Fix spacing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,4 @@
 @import "../../jslib/angular/src/scss/webfonts.css";
-
 @import "./variables";
 
 //@import "~bootstrap/scss/bootstrap";
@@ -57,5 +56,4 @@
 @import "./tables";
 @import "./toasts";
 
-$dark-icon-themes: "theme_dark";
 @import "../../jslib/angular/src/scss/icons.scss"; // Needs to be after font-awesome
